fix: hamburger overlapping behaviour

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -39,7 +39,7 @@
 }
 
 .headerContainerlogged {
-  padding-left: 50px;
+  padding-left: 50px !important;
 }
 
 /* main-content */
